# team-bemg

./: .gitignore  ProgressAndGoals.md  README.md  conftest.py  deploy.sh  docker-compose.yml  local.sh  main.py  makefile  pyproject.toml  pytest.ini  rebuild.sh  requirements-dev.txt  requirements.txt  vercel.json  wsgi.py
.github/workflows/: main.yml
api/: requirements.txt
data/: cache.py  cities.py  continents.py  coordinates.py  countries.py  db_connect.py  models.py  states.py  utils.py
data/bkup/: cities.json  continents.json  countries.json  states.json
data/tests/: test_cache_integration.py  test_cities.py  test_continents.py  test_coordinates.py  test_countries.py  test_models.py  test_states.py  test_timestamps_data.py  test_utils.py
docs/: Coordinates.md  LocalMongoTesting.md  Seeding.md
scripts/: seed_db.py
scripts/tests/: test_seed_db.py
security/: __init__.py  decorators.py  manager.py  models.py  security.md  security.py
security/tests/: test_jwt_edge_cases.py  test_models_manager.py  test_security.py
server/: app.py  auth.py  cities_endpoints.py  continents_endpoints.py  countries_endpoints.py  endpoints.py  helpers.py  states_endpoints.py
server/static/: geo.html  states.html
server/tests/: test_auth.py  test_cities_endpoints.py  test_continents_endpoints.py  test_countries_endpoints.py  test_countries_security.py  test_dev_config.py  test_dev_logs.py  test_endpoints.py  test_health.py  test_security_decorators.py  test_states_endpoints.py  test_timestamps.py
tmp/csc/: transform.py
