[project]
name = ""
version = "0.1.0"
dependencies = [
]
requires-python = ">=3.8"
authors = [
  {name = "Bryant Chong", email = "bsc6136@nyu.edu"},
  {name = "Emily Wei", email = "ew2482@nyu.edu"},
  {name = "Maksym Yemelianenko", email = "my2658@nyu.edu"},
  {name = "George Sirichartchai", email = "gs3802@nyu.edu"},
]
readme = "README.md"